Replace carousel slides with image divs

--- a/index.html
+++ b/index.html
@@ -787,10 +787,10 @@
       <!-- CAROUSEL 3D ROTATIVO -->
       <div class="hero-carousel">
         <div class="carousel-container">
-          <div class="carousel-slide" style="background: linear-gradient(135deg, #667eea, #764ba2);">🐕</div>
-          <div class="carousel-slide" style="background: linear-gradient(135deg, #06b6d4, #0891b2);">📊</div>
-          <div class="carousel-slide" style="background: linear-gradient(135deg, #f43f5e, #e11d48);">🛍️</div>
-          <div class="carousel-slide" style="background: linear-gradient(135deg, #3b82f6, #1e40af);">🎓</div>
+          <div class="images/Home16 Pro - 2.png" style="background: linear-gradient(135deg, #667eea, #764ba2);">🐕</div>
+          <div class="images/Desktop - 8.png" style="background: linear-gradient(135deg, #06b6d4, #0891b2);">📊</div>
+          <div class="images/Home.png" style="background: linear-gradient(135deg, #f43f5e, #e11d48);">🛍️</div>
+          <div class="images/HomeDesktop - 2.jpg" style="background: linear-gradient(135deg, #3b82f6, #1e40af);">🎓</div>
         </div>
         <div class="carousel-dots" id="carousel-dots"></div>
       </div>
