--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   </div>
   <div class="projects-grid">
     <div class="project-card">
-      <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div>
+      <div class="project-image" style="background-image: url('images/Home16 Pro - 2.png');"></div>
       <div class="project-content">
         <span class="project-tag">App Móvil</span>
         <h3>PASEO App</h3>
@@ -245,7 +245,7 @@
       </div>
     </div>
     <div class="project-card">
-      <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1460925895917-adf4e9e339b2?w=800&h=200&fit=crop');"></div>
+      <div class="project-image" style="background-image: url('images/Home.png');"></div>
       <div class="project-content">
         <span class="project-tag" style="background: #e0f7ff;">SaaS</span>
         <h3>Nexus Logistics</h3>
@@ -253,7 +253,7 @@
       </div>
     </div>
     <div class="project-card">
-      <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561911?w=800&h=200&fit=crop');"></div>
+      <div class="project-image" style="background-image: url('images/Desktop - 3.png');"></div>
       <div class="project-content">
         <span class="project-tag" style="background: #ffe0e0;">E-Commerce</span>
         <h3>La Caroyense</h3>
@@ -261,7 +261,7 @@
       </div>
     </div>
     <div class="project-card">
-      <div class="project-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div>
+      <div class="project-image" style="background-image: url('images/HomeDesktop - 2.jpg');"></div>
       <div class="project-content">
         <span class="project-tag" style="background: #e0e7ff;">Educativo</span>
         <h3>Yale School of Art</h3>
